<resources>
    <string name="app_name">WetherApp</string>
    <string name="feels_like">Feels like %s</string>
    <string name="possible_rain">Possible rain: %s%%</string>
    <string name="possible_snow">Possible snow: %s%%</string>
    <string name="rain_snow">Rain: %1$s%% | Snow: %2$s%%</string>
    <string name="no_precipitation">No precipitation expected</string>
    <string name="na">N/A</string>

    <string name="tab_hours">Hours</string>
    <string name="tab_days">Days</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="precipitation">Precipitation</string>
    <string name="toast_max_favorites">Maximum 10 favorite cities</string>
    <string name="toast_already_favorite">City is already in favorites</string>
    <string name="toast_added_favorite">City added to favorites</string>

    <string name="search_city_hint">Search city</string>
    <string name="settings">Settings</string>
    <string name="favorite_cities">Favorite cities</string>
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear history</string>
    <string name="toast_history_cleared">History is cleared</string>
    <string name="toast_removed_favorite">City removed from favorites</string>
    <string name="widget_title">Weather Widget</string>
    <string name="settings_units">Units</string>
    <string name="settings_temp">Temperature</string>
    <string name="settings_wind_speed">Wind speed</string>
    <string name="settings_pressure">Pressure</string>
    <string name="settings_language">Interface language</string>
    <string name="settings_lang_ru">Russian (EN - off)</string>
    <string name="settings_update_freq">Data update frequency</string>
    <string name="settings_gps">GPS Settings</string>
    <string name="settings_gps_accuracy">Accuracy</string>
    <string name="settings_gps_timeout">Timeout (sec)</string>
    <string name="unit_fahrenheit">%d°F</string>
    <string name="unit_celsius">%d°C</string>
    <string name="unit_kmh">km/h</string>
    <string name="unit_mph">mp/h</string>
    <string name="unit_ms">m/s</string>
    <string name="unit_hpa">hPa</string>
    <string name="unit_mmhg">mm Hg</string>
    <string name="unit_inhg">inhg</string>
    <string name="update_freq_5m">5 minutes</string>
    <string name="update_freq_15m">15 minutes</string>
    <string name="update_freq_30m">30 minutes</string>
    <string name="update_freq_1h">1 hour</string>
    <string name="update_freq_3h">3 hours</string>
    <string name="gps_accuracy_high">high</string>
    <string name="gps_accuracy_balanced">balanced</string>
    <string name="gps_accuracy_low">low</string>

    <string name="condition_sunny">Sunny</string>
    <string name="condition_clear">Clear</string>
    <string name="condition_partly_cloudy">Partly cloudy</string>
    <string name="condition_cloudy">Cloudy</string>
    <string name="condition_overcast">Overcast</string>
    <string name="condition_mist">Mist</string>
    <string name="condition_patchy_rain_possible">Patchy rain possible</string>
    <string name="condition_patchy_light_drizzle">Patchy light drizzle</string>
    <string name="condition_light_drizzle">Light drizzle</string>
    <string name="unit_visibility_km">%s km</string>
    <string name="condition_light_rain">Light rain</string>
    <string name="wind_dir_n">N</string>
    <string name="wind_dir_nne">NNE</string>
    <string name="wind_dir_ne">NE</string>
    <string name="wind_dir_ene">ENE</string>
    <string name="wind_dir_e">E</string>
    <string name="wind_dir_ese">ESE</string>
    <string name="wind_dir_se">SE</string>
    <string name="wind_dir_sse">SSE</string>
    <string name="wind_dir_s">S</string>
    <string name="wind_dir_ssw">SSW</string>
    <string name="wind_dir_sw">SW</string>
    <string name="wind_dir_wsw">WSW</string>
    <string name="wind_dir_w">W</string>
    <string name="wind_dir_wnw">WNW</string>
    <string name="wind_dir_nw">NW</string>
    <string name="wind_dir_nnw">NNW</string>
    <string name="condition_light_freezing_rain">Light freezing rain</string>
    <string name="dialog_butt1">Ok</string>
    <string name="dialog_butt2">Cancel</string>
    <string name="dialog_title">Enable location?</string>
    <string name="dialog_message">Location disabled, do you wanna enable location?</string>
</resources>